# pir

./: Cargo.toml  README.md
.github/workflows/: test.yaml
eir/: Cargo.toml
eir-fmm/: Cargo.toml
eir-fmm/src/: declarations.rs  definitions.rs  entry_functions.rs  error.rs  expressions.rs  foreign_declarations.rs  foreign_definitions.rs  function_applications.rs  lib.rs  type_information.rs  types.rs
eir/src/analysis/: environment_inference.rs  mod.rs  variant_type_collection.rs
eir/src/ir/: README.md  arithmetic_operation.rs  case.rs  comparison_operation.rs  definition.rs  expression.rs  function_application.rs  let_.rs  let_recursive.rs  module.rs  primitive.rs  primitive_alternative.rs  primitive_case.rs  record.rs  record_element.rs  string.rs  variant.rs  variant_alternative.rs  variant_case.rs
eir/src/types/: function.rs  mod.rs  primitive.rs  reference.rs  type_.rs
pir/: Cargo.toml
pir-fmm/: Cargo.toml
pir-fmm/src/: declarations.rs  definitions.rs  entry_functions.rs  error.rs  expressions.rs  foreign_declarations.rs  foreign_definitions.rs  lib.rs  type_information.rs  types.rs
pir/src/analysis/: environment_inference.rs  free_variables.rs  mod.rs  variant_type_collection.rs
pir/src/ir/: case.rs  expression.rs  function_application.rs  mod.rs  primitive.rs  primitive_case.rs  string.rs  variant_alternative.rs
pir/src/types/: function.rs  type_.rs
ssf-fmm/src/: declarations.rs  definitions.rs  entry_functions.rs  expressions.rs  foreign_declarations.rs  foreign_definitions.rs  lib.rs  type_information.rs  types.rs
ssf/src/ir/: case.rs  (+13 more)
(+7 files in other folders)
