[package]
name = "eir-fmm"
description = "eir to fmm compiler"
version = "0.1.0"
license = "MIT"
authors = ["Yota Toyama <raviqqe@gmail.com>"]
edition = "2018"

[dependencies]
fmm = { git = "https://github.com/raviqqe/fmm", branch = "main" }
eir = { path = "../eir" }

[dev-dependencies]
tempfile = "3"
fmm-c = { git = "https://github.com/raviqqe/fmm", branch = "main" }
fmm-llvm = { git = "https://github.com/raviqqe/fmm", branch = "main" }
